Fixes spacing of .new-tweet box and .new-tweet H2

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,7 +24,7 @@ body {
 main.container {
   background: #ffffff;
   margin: 0 auto;
-  padding: 60px 2em;
+  padding: 2em 2em;
   position: relative;
   top: 80px;
   max-width: 450px;
